--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hdstorage</title>
-    <link rel="stylesheet" href="../../assets/css/catalog/catalog.css">
+    <link rel="stylesheet" href="css/catalog/catalog.css">
 </head>
 <body>
 <header class="header">
@@ -509,6 +509,6 @@
         </div>
     </div>
 </footer>
-<script src="../../assets/js/catalog.js"></script>
+<script src="js/catalog.js"></script>
 </body>
 </html>
