--- a/catalog.html
+++ b/catalog.html
@@ -492,17 +492,17 @@
             <ul class="footer__social-list">
                 <li class="footer__social-item">
                     <a href="#" class="footer__social-link">
-                        <img src="../../assets/img/odnoklassniki.svg" alt="" class="footer__social-img">
+                        <img src="img/odnoklassniki.svg" alt="" class="footer__social-img">
                     </a>
                 </li>
                 <li class="footer__social-item">
                     <a href="#" class="footer__social-link">
-                        <img src="../../assets/img/vk.svg" alt="" class="footer__social-img">
+                        <img src="img/vk.svg" alt="" class="footer__social-img">
                     </a>
                 </li>
                 <li class="footer__social-item">
                     <a href="#" class="footer__social-link">
-                        <img src="../../assets/img/facebook.svg" alt="" class="footer__social-img">
+                        <img src="img/facebook.svg" alt="" class="footer__social-img">
                     </a>
                 </li>
             </ul>
